0.8.2 (22.09.2017)
================
* fix bug with single column "mrset"
* fix bug with significance tests on tables with complex headers
* add uboxing possibilities for ..[] (..[] = list/data.frame will create separate variables from that list/data.frame)

0.8.1 (10.08.2017)
================
* add significance testing (see ?significance)
* add support for table output for Jupyter notebooks
* add 'use_labels' function for experimental support variable labels in base R functions and third party packages (see ?use_labels)
* increase table functions performance
* increase 'as.dichotomy'/'dummy' performance
* increase 'vlookup'/'vlookup_df' performance
* numerous bugfixes
* now 'keep'/'except'/'by_groups' operate with NSE. For standard evaluation just surround you variable with round brackets
* add print options 'commented' for printing tables to console with '#'
* add functions 'split_separate'/'split_off'
* add 'prepend_names'/'prepend_labels' - issue #2
* add 'indirect'/'indirect_list' - aliases for 'vars'/'vars_list'
* add 'mis_val' - alias for 'na_if'
* add 'unsafe' argument for *_fun/*_fun_df.
* add '..' object for parameter substitution inside 'compute' and etc. Usage: '..$param_name'. For details: ?..
* improve 'lst' function
* '.set'/'set' inside 'compute' and etc. are deprecated. Use '%into%' instead.
* expansion of variables in backticks inside 'vars'/'vars_list'/'%into%' is removed. Use explicit 'subst' instead
* infix/assignment versions removed: '%modify%', '%compute%', '%sort_asc%', '%sort_desc%', '%keep%', '%except%', '%where%', '%by_groups%'


0.7.1 (10.04.2017)
================
* make value labels support in the base R and other packages (via 'factor' for class 'labelled')
* radically improved performace for 'cro_*' and 'fre_*' due to 'data.table' under the hood
* multiple/nested banners/variables suppport in 'cro_*'
* add 'datatable' for tables representation in Shiny