@@ -298,7 +298,6 @@ export(.lst)
 export(.modify)
 export(.modify_if)
 export(.recode)
-export(.set)
 export(.sort_asc)
 export(.sort_desc)
 export(.val_lab)
